--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["amir kamolov <kamolov.amir2000@yandex.ru>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 gunicorn = "^20.1.0"
+Django = "^3.2.9"
+django-cors-headers = "^3.10.0"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.5.7"
