--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.9"
 gunicorn = "^20.1.0"
 Django = "^3.2.9"
 django-cors-headers = "^3.10.0"
+psycopg2 = "^2.9.2"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.5.7"
